# voronoi

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
tests/: generate_svg.rs
