[package]
name = "voronoi"
version = "0.1.0"
edition = "2018"

[lib]
name = "voronoi"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
svg = "0.10.0"
criterion = "0.3.5"
